# iGed

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  et --soft HEAD@{1}
NTF/OptixBaker/: CMakeLists.txt
NTF/OptixBaker/assets/: optix_kernel.ptx  optixbaker.pyd
NTF/OptixBaker/src/: OptixBaker.cpp  optix9.h  optix_kernel.cu
SandBox/: CMakeLists.txt
SandBox/assets/shaders/: CMakeLists.txt  Texture.glsl
SandBox/assets/shaders/slang/: Color.slang  Texture.slang  hello-world.slang
SandBox/assets/shaders/tools/: ShaderCompile.py  compile.bat
SandBox/src/: ExampleLayer.cpp  ExampleLayer.h  SandboxApp.cpp
Sandbox/: CMakeLists.txt
Sandbox/assets/pipelines/: Color.json  Texture.json
Sandbox/assets/ptxs/: optixKernel_86.ptx
Sandbox/assets/shaders/: BlinnPhong.glsl  CMakeLists.txt  Color.glsl  Tessellation.comp
Sandbox/assets/shaders/other/: SWTessellator.json  SWTessellator_as.glsl  SWTessellator_fs.glsl  SWTessellator_ms.glsl  SWTessllator.slang
Sandbox/assets/shaders/slang/: BlinnPhong.slang  CalTessFactor.slang  ClearDepth.slang  Color.slang  Common.slang  FullScreen.slang  HWTessellation.slang  HWTessellator.slang  Lighting.slang  RasterizerUtils.slang  SWRasterizer.slang  SWTessellator.slang  TessUtils.slang  Tessellation.slang  Test.slang  Texture.slang
Sandbox/assets/shaders/tools/: ShaderCompile.py  SlangCompiler.py
Sandbox/assets/textures/: displacement.exr
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.ixx  RuntimeLodLayer.cpp  RuntimeLodLayer.ixx  SandboxApp.cpp
Sandbox/src/MeshBaker/: Backer.cpp  Baker.cpp  Baker.ixx  Mesh.cpp  Mesh.ixx  MeshBaker.ixx
Sandbox/src/MeshBaker/CPUBaker/: CPUBaker.cpp  CPUBaker.ixx
Sandbox/src/MeshBaker/OptixBaker/: OptixBaker.cpp  OptixBaker.ixx  bakeKernel.cu  bakeKernel.ptx  kernel.cu  myStruct.h  optix9.h  optixKernel.cu
Sandbox/src/MeshFitting/: Fitting.cpp  Fitting.ixx  Mesh.cpp  Mesh.ixx  MeshFitting.ixx
Sandbox/src/NTF/: Preprocessor.py
app/: CMakeLists.txt  ExampleLayer.cpp  ExampleLayer.h  app.cpp
iGe/: CMakeLists.txt
iGe/include/: EntryPoint.h  iGe.h  iGeEntryPoint.h  iGeMacro.h  iGepch.h
iGe/include/Common/: iGepch.h
iGe/include/Platform/Windows/: WindowsWindow.h
iGe/include/iGe/: Application.h  Core.h  EntryPoint.h  Layer.h  LayerStack.h  Log.h  Window.h
iGe/include/iGe/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
iGe/modules/: Application.ixx  Layer.ixx  LayerStack.ixx  Log.ixx  iGe.ixx  iGeMacro.h  spdlog.ixx  std.ixx
iGe/modules/Common/: Common.ixx  CommonFunctions.ixx  Diagnostics.ixx  Event.ixx  Flags.ixx  Layer.cpp  Layer.ixx  LayerStack.cpp  LayerStack.ixx  Log.cpp  Log.ixx  SmartPointer.ixx  Timestep.cpp  Timestep.ixx  Types.ixx  Window.ixx  igm.ixx
iGe/modules/Common/Events/: Event-ApplicationEven.cpp  Event-ApplicationEvent.ixx  Event-Event.cpp  Event-Event.ixx  Event-KeyCodes.ixx  Event-KeyEvent.cpp  Event-KeyEvent.ixx  Event-MouseEvent.cpp  Event-MouseEvent.ixx  Event.ixx
iGe/modules/Common/Window/: Window-Window.ixx  Window-WindowsWindow.ixx
iGe/modules/Common/igm/: igm-clipspace.ixx  igm-common.ixx  igm-mat2x2.ixx  igm-mat3x3.ixx  igm-mat4x4.ixx  igm-vec2.ixx  igm-vec3.ixx  igm-vec4.ixx
iGe/modules/Core/: Core-Application.cpp  Core-Application.ixx  Core-ImGuiLayer.cpp  Core-ImGuiLayer.ixx  Core-Input.cpp  Core-Input.ixx  Core-WindowsInput.cpp  Core-WindowsInput.ixx  Core.ixx
iGe/modules/Events/: Event.ixx  Event_Application.ixx  Event_Base.ixx  Event_Key.ixx  Event_Mouse.ixx
iGe/modules/Platform/Windows/: Core-WindowsInput.cpp  Core-WindowsInput.ixx  Window-WindowsWindow.cpp  Window-WindowsWindow.ixx
iGe/modules/Renderer/: GraphicsContext.ixx  Renderer-Buffer.cpp  Renderer-Buffer.ixx  Renderer-Camera.cpp  Renderer-Camera.ixx  Renderer-GraphicsContext.cpp  Renderer-GraphicsContext.ixx  Renderer-OrthographicCamera.cpp  Renderer-OrthographicCamera.ixx  Renderer-PipelineParser.cpp  Renderer-PipelineParser.ixx  Renderer-RenderCommand.cpp  Renderer-RenderCommand.ixx  Renderer-Renderer.cpp  Renderer-Renderer.ixx  Renderer-RendererAPI.cpp  Renderer-RendererAPI.ixx  Renderer-Shader.cpp  Renderer-Shader.ixx  Renderer-Texture.cpp  Renderer-Texture.ixx  Renderer-VertexArray.cpp  Renderer-VertexArray.ixx  Renderer.ixx
iGe/modules/Renderer/Context/: GraphicsContext-GraphicsContext.ixx  GraphicsContext-OpenGLContext.cpp  GraphicsContext-OpenGLContext.ixx
iGe/modules/Renderer/OpenGL/: Renderer-OpenGLBuffer.cpp  Renderer-OpenGLBuffer.ixx  Renderer-OpenGLContext.cpp  Renderer-OpenGLContext.ixx  Renderer-OpenGLRendererAPI.cpp  Renderer-OpenGLRendererAPI.ixx  Renderer-OpenGLShader.cpp  Renderer-OpenGLShader.ixx  Renderer-OpenGLTexture.cpp  Renderer-OpenGLTexture.ixx  Renderer-OpenGLVertexArray.cpp  Renderer-OpenGLVertexArray.ixx
iGe/modules/Renderer/RHI/: RHI-Barrier.ixx  RHI-Buffer.cpp  RHI-Buffer.ixx  RHI-CommandList.ixx  RHI-CommandPool.ixx  RHI-ComputePipeline.ixx  RHI-Descriptor.ixx  RHI-DeviceCapabilities.ixx  RHI-Fence.ixx  RHI-Framebuffer.ixx  RHI-GraphicsPipeline.ixx  RHI-ImGuiContext.cpp  RHI-ImGuiContext.ixx  RHI-Queue.ixx  RHI-RHI.cpp  RHI-RHI.ixx  RHI-RenderPass.ixx  RHI-Resource.ixx  RHI-Sampler.ixx  RHI-Semaphore.ixx  RHI-Shader.ixx  RHI-Surface.ixx  RHI-SwapChain.ixx  RHI-Texture.ixx  RHI-TextureView.ixx  RHI.ixx
iGe/modules/Renderer/RHI/DirectX12/: RHI-DirectX12Buffer.cpp  RHI-DirectX12Buffer.ixx  (+38 more)
iGe/modules/Window/: Window-Window.cpp  Window-Window.ixx  Window-WindowsWindow.cpp  Window-WindowsWindow.ixx  Window.ixx  Window_Base.ixx  Window_Windows.ixx
iGe/modules/src/: Core.cpp  Event.cpp  LayerStack.cpp  Log.cpp  README.md  Window.cpp
iGe/src/: Application.ixx  Layer.ixx  LayerStack.ixx  Log.ixx  iGe.ixx
iGe/src/Events/: Event_Application.ixx  Event_Base.ixx  Event_Key.ixx  Event_Mouse.ixx
iGe/src/Platform/Windows/: WindowsWindow.cpp
iGe/src/Window/: Window.ixx  Window_Base.ixx  Window_Windows.ixx
iGe/src/iGe/: Application.cpp  Layer.cpp  LayerStack.cpp  Log.cpp
iGed/: CMakeLists.txt
iGed/include/: iGed.h
iGed/include/iGed/: Application.h  Core.h  EntryPoint.h
iGed/src/iGed/: Application.cpp
(+9 files in other folders)
